# Calyx

./: .gitattributes  .gitignore  .gitleaksignore  Cargo.toml  README.md
crates/calyx-anneal/: Cargo.toml
crates/calyx-anneal/src/: budget.rs  integration_fsv.rs  ledger_anneal.rs  lib.rs  rollback.rs  shadow.rs  tripwire.rs
crates/calyx-anneal/tests/: ab_runner.rs  ab_runner_fsv.rs  admission_record.rs  bandit.rs  bandit_fsv.rs  budget.rs  budget_fsv.rs  candidate_synth.rs  deficit_localize.rs  degrade.rs  differentiation_gate.rs  frozen_guard.rs  frozen_guard_fsv.rs  fsv_bad_change.rs  fsv_corrupt_rebuild.rs  fsv_j_growth.rs  fsv_lens_proposal.rs  fsv_mistake_closure.rs  fsv_soak.rs  goodhart.rs  gradient.rs  growth_curve.rs  growth_curve_fsv.rs  intelligence_report.rs  issue392_fsv.rs  issue791_conversion_flywheel_fsv.rs  j_composite.rs  ledger_anneal.rs  ledger_anneal_fsv.rs  mistake_log.rs  mistake_log_fsv.rs  online_head.rs  online_head_fsv.rs  operator_synth.rs  operator_synth_fsv.rs  propose_lens.rs  rebuild.rs  rebuild_fsv.rs  recalibrate.rs  recalibrate_fsv.rs  (+24 more)
crates/calyx-cli/: Cargo.toml
crates/calyx-cli/src/: anneal_ab_log.rs  anneal_autotune_report.rs  anneal_bandit_readback.rs  anneal_commands.rs  anneal_deficit_map.rs  anneal_frozen_guard_readback.rs  anneal_goodhart_check.rs  anneal_growth_curve.rs  anneal_head_readback.rs  anneal_intelligence_report.rs  anneal_ledger_readback.rs  anneal_lens_proposal_log.rs  anneal_mistakes_readback.rs  anneal_propose_lens_fixture.rs  anneal_propose_lens_run.rs  anneal_propose_preview.rs  anneal_regression_readback.rs  anneal_replay_readback.rs  anneal_soak.rs  anneal_soak_report.rs  anneal_status.rs  assay_fbin_export.rs  assay_fbin_export_tests.rs  assay_i8bin_ensemble_card.rs  bounded_progress.rs  budget_readback.rs  cf_read.rs  cli_support.rs  crash.rs  dedup_audit_readback.rs  dedup_readback.rs  dispatch.rs  entry.rs  error.rs  fsv.rs  healthcheck.rs  healthcheck_daemon.rs  healthcheck_tests.rs  intelligence_commands.rs  kernel_health_readback.rs  (+39 more)
crates/calyx-cli/tests/: audit_cli.rs  audit_cli_hardening.rs  checkpoint_scan.rs  cli_error_emit_fsv.rs  compact_cli_recovery.rs  compression_report_readback.rs  dedup_anchor_conflict_property_readback.rs  dedup_anchor_conflict_readback.rs  dedup_audit_readback.rs  dedup_check_readback.rs  dedup_ingest_at_readback.rs  dedup_invariants_readback.rs  dedup_qqp_paws_fsv.rs  dedup_rolled_undo_readback.rs  issue757_summarize_cli.rs  issue918_search_provenance.rs  leapable_issue612.rs  living_concert_fsv.rs  merkle_vault.rs  migrate_verify_cli.rs  navigate_fsv.rs  periodic_recall_readback.rs  ph36_fsv_integration.rs  ph42_readback_schema.rs  ph42_readback_surfaces.rs  recurrence_concurrency_readback.rs  recurrence_series_readback.rs  search_resident_service_fsv.rs  temporal_log_recurrence_readback.rs  time_prediction_readback.rs  timetravel_readback_fsv.rs  verify_chain.rs  verify_chain_physical.rs
crates/calyx-mcp/: Cargo.toml
crates/calyx-mcp/src/: jsonrpc.rs  lib.rs  main.rs  protocol.rs  schema.rs  server.rs
crates/calyx-mcp/tests/: jsonrpc.rs  stdio.rs
crates/calyx-sextant/: Cargo.toml
crates/calyx-sextant/examples/: temporal_window_recall_fsv_driver.rs
crates/calyx-sextant/src/: error.rs  guarded.rs  lib.rs  planner.rs  search.rs  search_support.rs  slot_index_map.rs
crates/calyx-sextant/tests/: causal_gate_fsv.rs  diskann_concat.rs  diskann_graph.rs  diskann_search.rs  diskann_token.rs  embedded_scale_perf_fsv.rs  gpu_parity_fsv.rs  guarded_inert.rs  guarded_multislot_readback.rs  guarded_search.rs  hnsw_recall.rs  ph55_fsv.rs  ph58_ann_gc_fsv.rs  ph63_navigation_consensus_traverse.rs  ph63_navigation_fsv.rs  ph63_navigation_skills.rs  ph68_parallel_build_fsv.rs  pipeline_recall_headroom_fsv.rs  planner_explain_path_fsv.rs  query_admission_fsv.rs  query_filters_fsv.rs  query_validation.rs  recurrence_boost.rs  recurrence_boost_fsv.rs  reranker_nonpersistence_fsv.rs  reranker_search_fsv.rs  reranker_tei_nonpersistence_fsv.rs  sparse_vector_readback_fsv.rs  stage4_fail_closed_tests.rs  stage4_fsv.rs  stage4_real_qrels_fsv.rs  temporal_boost_fsv.rs  (+6 more)
crates/calyx-testkit/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: aster_manifest_decode.rs  aster_sst_decode.rs  aster_wal_replay.rs  lens_output_decode.rs  mcp_jsonrpc_decode.rs  query_parse.rs
(+844 files in other folders)
