[package]
name = "calyx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyx"
path = "src/main.rs"

[dependencies]
calyx-assay = { path = "../calyx-assay" }
calyx-anneal = { path = "../calyx-anneal" }
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-lodestar = { path = "../calyx-lodestar" }
calyx-loom = { path = "../calyx-loom" }
calyx-oracle = { path = "../calyx-oracle" }
calyx-paths = { path = "../calyx-paths" }
calyx-registry = { path = "../calyx-registry" }
calyx-sextant = { path = "../calyx-sextant" }
calyxd = { path = "../calyxd" }
blake3.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true

[dev-dependencies]
calyx-ward = { path = "../calyx-ward" }
proptest.workspace = true
