[package]
name = "calyx-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyx-mcp"
path = "src/main.rs"

[dependencies]
calyx-core = { path = "../calyx-core" }
serde.workspace = true
serde_json.workspace = true
