[package]
name = "calyx-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
calyx-core = { path = "../calyx-core" }
proptest.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
